tests/paczka1/small_fuzzy/72190488.err
Error in line 1: 3xhKyQCcd S793 66,8
Error in line 5: bB6iWCm S589 2,7
Error in line 7: NFt S793 676,3
